@startuml ERD_VHRent

!define TABLE(x) class x << (T,#FFAAAA) >>
!define PK(x) <b><color:#b8860b>x</color></b>
!define FK(x) <color:#aaaaaa>x</color>
!define NOT_NULL(x) <u>x</u>

skinparam class {
    BackgroundColor White
    BorderColor #2c3e50
    ArrowColor #2c3e50
    FontName Arial
    FontSize 12
}

skinparam classAttribute {
    FontName Consolas
    FontSize 11
}

title **VHRent - Entity Relationship Diagram**\n**Sistem Manajemen Penyewaan Kendaraan**

' ========================================
' TABEL ADMINS
' ========================================
TABLE(admins) {
    PK(id) : INT <<AUTO_INCREMENT>>
    --
    NOT_NULL(username) : VARCHAR(50) <<UNIQUE>>
    NOT_NULL(password) : VARCHAR(255)
    NOT_NULL(nama_lengkap) : VARCHAR(100)
    NOT_NULL(nim) : VARCHAR(9)
    email : VARCHAR(100)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ========================================
' TABEL KENDARAAN (MASTER)
' ========================================
TABLE(kendaraan) {
    PK(id) : INT <<AUTO_INCREMENT>>
    --
    NOT_NULL(nama) : VARCHAR(100)
    NOT_NULL(jenis) : ENUM('Mobil','Motor','Sepeda','Truk','Bus')
    NOT_NULL(merk) : VARCHAR(50)
    NOT_NULL(tahun) : INT
    NOT_NULL(plat_nomor) : VARCHAR(20) <<UNIQUE>>
    warna : VARCHAR(30)
    NOT_NULL(harga_sewa_per_hari) : DECIMAL(12,2)
    stok : INT <<DEFAULT 1>>
    stok_tersedia : INT <<DEFAULT 1>>
    gambar_url : TEXT
    deskripsi : TEXT
    status : ENUM('Tersedia','Tidak Tersedia')
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ========================================
' TABEL PELANGGAN (MASTER)
' ========================================
TABLE(pelanggan) {
    PK(id) : INT <<AUTO_INCREMENT>>
    --
    NOT_NULL(nama) : VARCHAR(100)
    NOT_NULL(nik) : VARCHAR(16) <<UNIQUE>>
    NOT_NULL(no_telepon) : VARCHAR(15)
    email : VARCHAR(100)
    alamat : TEXT
    NOT_NULL(jenis_kelamin) : ENUM('Laki-laki','Perempuan')
    tanggal_lahir : DATE
    no_sim : VARCHAR(20)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ========================================
' TABEL TRANSAKSI
' ========================================
TABLE(transaksi) {
    PK(id) : INT <<AUTO_INCREMENT>>
    --
    NOT_NULL(kode_transaksi) : VARCHAR(20) <<UNIQUE>>
    FK(pelanggan_id) : INT <<NOT NULL>>
    FK(kendaraan_id) : INT <<NOT NULL>>
    NOT_NULL(tanggal_sewa) : DATE
    NOT_NULL(tanggal_kembali_rencana) : DATE
    tanggal_kembali_aktual : DATE
    NOT_NULL(jumlah_hari) : INT
    NOT_NULL(harga_per_hari) : DECIMAL(12,2)
    NOT_NULL(total_biaya) : DECIMAL(12,2)
    status : ENUM('Disewa','Dikembalikan','Terlambat','Dibatalkan')
    catatan : TEXT
    FK(admin_id) : INT <<NOT NULL>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ========================================
' TABEL DENDA
' ========================================
TABLE(denda) {
    PK(id) : INT <<AUTO_INCREMENT>>
    --
    FK(transaksi_id) : INT <<NOT NULL, UNIQUE>>
    NOT_NULL(jumlah_hari_terlambat) : INT
    NOT_NULL(denda_per_hari) : DECIMAL(12,2)
    NOT_NULL(total_denda) : DECIMAL(12,2)
    status_pembayaran : ENUM('Belum Dibayar','Lunas')
    tanggal_bayar : DATE
    keterangan : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ========================================
' TABEL SETTINGS
' ========================================
TABLE(settings) {
    PK(id) : INT <<AUTO_INCREMENT>>
    --
    NOT_NULL(setting_key) : VARCHAR(50) <<UNIQUE>>
    NOT_NULL(setting_value) : TEXT
    description : TEXT
    updated_at : TIMESTAMP
}

' ========================================
' RELASI ANTAR TABEL
' ========================================

' Pelanggan ke Transaksi (1 to Many)
pelanggan "1" ||--o{ "0..*" transaksi : "melakukan >"

' Kendaraan ke Transaksi (1 to Many)
kendaraan "1" ||--o{ "0..*" transaksi : "disewa pada >"

' Admin ke Transaksi (1 to Many)
admins "1" ||--o{ "0..*" transaksi : "mengelola >"

' Transaksi ke Denda (1 to 1 Optional)
transaksi "1" ||--o| "0..1" denda : "memiliki >"

' ========================================
' LEGEND
' ========================================
legend bottom right
    |= Simbol |= Keterangan |
    | <b><color:#b8860b>field</color></b> | Primary Key |
    | <color:#aaaaaa>field</color> | Foreign Key |
    | <u>field</u> | NOT NULL |
    | ||--o{ | One to Many |
    | ||--o| | One to One (Optional) |
endlegend

note as N1
    **Keterangan Relasi:**
    
    1. **pelanggan → transaksi** (1:N)
       Satu pelanggan dapat melakukan banyak transaksi
    
    2. **kendaraan → transaksi** (1:N)
       Satu kendaraan dapat disewa dalam banyak transaksi
    
    3. **admins → transaksi** (1:N)
       Satu admin dapat mengelola banyak transaksi
    
    4. **transaksi → denda** (1:1)
       Satu transaksi dapat memiliki maksimal satu denda
       (hanya jika terlambat mengembalikan)
    
    5. **settings** (standalone)
       Tabel konfigurasi sistem
end note

@enduml
